--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
   
 	"permissions": [
 		"tabs",
+		"https://www.youtube.com/*",
 		"activeTab",
         "storage"	
 	],
@@ -16,5 +17,21 @@
 		"default_icon": "icon.png",
 		"default_popup": "popup.html"
 	},
+
+	"background": {
+        "scripts": [ 
+        	"jquery.1.10.2.min.js", 
+        	"background.js"
+        ]
+    },
+
+    "content_scripts": [
+        {
+            "matches": [ "https://www.youtube.com/*" ],
+            "js": [ "jquery.1.10.2.min.js" ],
+            "run_at": "document_end"
+        }
+    ],
+
 	"content_security_policy": "script-src 'self' https://ajax.googleapis.com; object-src 'self'"
 }
