--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,7 @@
     "content_scripts": [
         {
             "matches": [ "https://www.youtube.com/*" ],
-            "js": [ "jquery.1.10.2.min.js" ],
+            "js": [ "jquery.1.10.2.min.js", "filterContent.js" ],
             "run_at": "document_end"
         }
     ],
